<resources>
    <string name="app_name">PHR</string>

    <string name="home_page">首页</string>
    <string name="health">健康</string>
    <string name="physical_examination">体检</string>
    <string name="community">社区</string>

    <!--menu-->
    <string name="my_book">我的预约</string>
    <string name="account_info">账号管理</string>
    <string name="my_medical_record_folder">我的病历夹</string>
    <string name="my_phr_management">个人PHR管理</string>
    <string name="health_assessment">健康指数评估</string>
    <string name="healthy_news_detail">健康新闻</string>
    <string name="menu_about">关于</string>


    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="search_hint">搜索医生/医院/药品</string>


    <string-array name="expert_type">
        <item>骨科</item>
        <item>小儿外科</item>
        <item>耳鼻喉科</item>
        <item>皮肤科</item>
    </string-array>

    <string-array name="blood_type">
        <item>A型</item>
        <item>B型</item>
        <item>AB型</item>
        <item>O型</item>
    </string-array>

    <string-array name="book_time">
        <item>9:00–10:00</item>
        <item>10:00–11:00</item>
        <item>15:00–16:00</item>
        <item>16:00–17:00</item>
    </string-array>


    <string-array name="healthy_check_time">
        <item>9:00-10:00</item>
        <item>10:00-11:00</item>
        <item>15:00–16:00</item>
        <item>16:00–17:00</item>
    </string-array>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="resover_examintion">预约体检</string>
    <string name="resover_order">预定订单</string>
    <string name="my_report">我的报告</string>
    <string name="rent_device">设备租赁</string>
    <string name="regin_new_account">注册新账号</string>
    <string name="use_with_wechat">使用微信登录</string>
    <string name="forgein_password">忘记密码？</string>
    <string name="username_cannot_be_empty">用户名不可以为空</string>
    <string name="password_cannot_empty">密码不可以为空</string>
    <string name="sign_in">S I G N  I N</string>
    <string name="health_color">#ff2e7c32</string>
    <string name="check_page_color">#ff37474f</string>
    <string name="error_happen_msg">获取失败，请稍后重试！</string>
    <string name="success_msg">获取成功！</string>

    <string name="patient_name">姓名：</string>
    <string name="patient_age">年龄：</string>
    <string name="patient_household">户籍：</string>
    <string name="treatment_hospital">就诊医院：</string>
    <string name="treatment_time">就诊时间：</string>
    <string name="body_condition">身体状况：</string>
    <string name="prescription">药物处方：</string>
    <string name="schedule">治疗日程：</string>
    <string name="remark">待办事件：</string>
    <string name="patient_height">身高：</string>
    <string name="patient_weight">体重：</string>
    <string name="blood_type">血型：</string>

    <string name="heart_rate">心率：</string>
    <string name="blood_pressure">血压：</string>
    <string name="systolic">收缩压</string>
    <string name="diastolic">舒张压</string>
    <string name="smoking_amount">吸烟量：</string>
    <string name="drinking_type">饮酒类型：</string>

    <string name="alcohol_comsuption">饮酒量：</string>
    <string name="drinking_frequency">饮酒频率：</string>

    <!--饮酒类型-->
    <string-array name="choose_drinking_type">
        <item>白酒</item>
        <item>红酒</item>
        <item>啤酒</item>
        <item>药酒</item>
    </string-array>
    <!--吸烟量-->
    <string-array name="smoking_amount">
        <item>从不</item>
        <item>少量</item>
        <item>中等</item>
        <item>大量</item>
        <item>上瘾</item>
    </string-array>
    <!--饮酒量-->
    <string-array name="drinking_amount">
        <item>从不</item>
        <item>适当</item>
        <item>中等</item>
        <item>大量</item>
    </string-array>
    <!--饮酒频率-->
    <string-array name="choose_drinking_frequency">
        <item>从不</item>
        <item>偶尔</item>
        <item>经常</item>
        <item>总是</item>
    </string-array>

    <string name="exercise_status">体育锻炼情况：</string>
    <string name="allergy_history">药物过敏史：</string>
    <string name="sick_history">病史：</string>
    <string name="commit_ok">确认提交</string>
    <string name="yuan">￥</string>
    <string name="had_reserve">已经预约</string>
    <string name="healthy_package_detail">套餐详情</string>
    <string name="cancle_reserve">取消预约</string>
    <string name="cancle_order_reserve">取消预约</string>
    <string name="reserve_hospital">医院：</string>
    <string name="group_number">开发小组成员： 连浩逵、彭伟伦、曹伟钊 刘剑璇、林绮婷、罗永楠</string>
    <string name="app_detail">简述：  当前版本APP所涉及的图片以及相关的文章均为公共网络资源，均仅做测试使用，如有侵犯个人权益信息，请及时联系项目组成员，立即删除并道歉，以免造成进一步的损失。  如有对APP建议的，也可以联系我们，欢迎各位提出建议，我们将进行考虑。</string>
    <string name="contract_us">联系我们：  18819259390  1289504616@qq.com</string>
    <string name="appointment_doctor_name">医生名：</string>
    <string name="doctor_detail">医生简介：</string>
    <string name="appointment_hostpital_name">医院名字：</string>
    <string name="appotinment_time_all">时间：</string>
    <string name="appointment_phone_nameber">手机号码：</string>
    <string name="appointment_status">预约状态：</string>

</resources>
