<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none" android:id="@+id/group_1">
        <item
            android:id="@+id/menu_my_book"
            android:icon="@drawable/ic_book"
            android:title="@string/my_book"
            />

        <item
            android:id="@+id/menu_account_info"
            android:icon="@drawable/ic_account_info"
            android:title="@string/account_info"/>

        <item
            android:id="@+id/menu_my_medical_record_folder"
            android:icon="@drawable/ic_medical_record_folder"
            android:title="@string/my_medical_record_folder"/>

        <item
            android:id="@+id/menu_my_phr_management"
            android:icon="@drawable/ic_phr_management"
            android:title="@string/my_phr_management"/>

        <item
            android:id="@+id/menu_health_assessment"
            android:icon="@drawable/ic_assessment"
            android:title="@string/health_assessment"/>
    </group>
    <group android:checkableBehavior="none" android:id="@+id/group_2">
        <item
            android:id="@+id/about_app"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
    </group>
</menu>