<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary"
        app:title="登录"
        app:titleTextColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="80dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_id"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            android:hint="帐号"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="1dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_pw"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            android:hint="密码"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:text="S I G N   I N"
        android:textColor="#525e71"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/forgein_password"
        android:textColor="#000000"
        android:textSize="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/test_eva2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="或"
            android:textColor="#000000"
            android:textSize="16dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/test_eva2"
            android:background="#525e71"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/test_eva2"
            android:background="#525e71"/>
    </RelativeLayout>

    <Button

        android:id="@+id/login_regist_by_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:drawableLeft="@drawable/ic_wechat"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/use_with_wechat"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:text="@string/regin_new_account"
        android:textSize="16dp"/>

</LinearLayout>